[package]
name = "simpleio"
version = "0.2.1"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
description = "A simple crate for file io that i use in my personal projects."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/codybloemhard/simpleio"
keywords = ["file","io"]

[lib]
name = "simpleio"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
